# sanctum-spl-stake-pool-cli

./: Cargo.toml  README.md  rust-toolchain.toml
docker/: Dockerfile.builder.musl
src/: consts.rs  lib.rs  luts.rs  main.rs  parse.rs  sorted_signers.rs  test_utils.rs  tx_utils.rs  update.rs  utils.rs
src/parse/: mod.rs  signer.rs  spl_stake_pool_program.rs
src/pool_config/: create.rs  file.rs  mod.rs  read.rs  sync_delegation.rs  sync_pool.rs  sync_pool_manager.rs  sync_validator_delegations.rs  sync_validator_list.rs  utils.rs
src/subcmd/: create_pool.rs  decrease_validator_stake.rs  deposit_sol.rs  deposit_stake.rs  increase_validator_stake.rs  list.rs  mod.rs  set_staker.rs  sync_delegation.rs  sync_pool.rs  sync_validator_list.rs  update.rs  withdraw_stake.rs
src/subcmd/create_pool/: mod.rs
test-fixtures/: README.md  example-init-pool-config.toml  example-manager-fee-acc-keypair.json  example-manager.json  example-new-manager-keypair.json  example-new-staker-keypair.json  example-pool-config.toml  example-pool-keypair.json  example-pool-mint-keypair.json  example-reserve-keypair.json  example-set-staker-config.toml  example-staker-keypair.json  example-sync-delegation-config.toml  example-sync-pool-config.toml  example-sync-validator-list-config.toml  example-validator-list-keypair.json  shinobi-vote.json  zeta-vote.json
tests/: mod.rs
tests/common/: cmd.rs  config_file.rs  consts.rs  mock_accounts.rs  mod.rs  setup.rs  spl.rs  vote.rs
tests/tests/: init.rs  mod.rs  set_staker.rs  sync_validator_list.rs
